--- a/index.html
+++ b/index.html
@@ -87,3 +87,6 @@
 
 </body>
 </html>
+
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3JfDPQ4ro31x0xTJ",ck:"3JfDPQ4ro31x0xTJ"})</script>
